--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-input-mask": "^2.0.4",
     "react-number-format": "^5.3.1",
     "react-responsive": "^9.0.2",
     "react-toastify": "^9.1.3",
@@ -41,6 +42,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.6",
     "@types/uuid": "^9.0.2"
   }
 }
