--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.19",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.13",
+    "exceljs": "^4.4.0",
     "formik": "^2.4.3",
     "jwt-decode": "^4.0.0",
     "next": "13.4.13",
@@ -39,10 +41,12 @@
     "simplebar-react": "^3.2.4",
     "typescript": "5.1.6",
     "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react-input-mask": "^3.0.6",
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "@types/xlsx": "^0.0.36"
   }
 }
