--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "build:analyze": "ANALYZE=true next build",
-    "start": "next start",
-    "start:prod": "NODE_ENV=production next start -p 3000",
+    "start": "npx serve@latest out",
+    "start:prod": "npx serve@latest out -p 3000",
     "lint": "next lint",
     "type-check": "tsc --noEmit"
   },
